<?xml version="1.0" encoding="utf-8"?>
<!-- Autor: Arturo Balleros Albillo -->
<resources>
    <string name="formato_fecha">format (dd/MM/yyyy)</string>

    <string name="app_name">ReadyReq</string>
    <string name="menu_grupo">Workgroup</string>
    <string name="menu_actor">Project Actors</string>
    <string name="menu_conf">Configuration</string>
    <string name="menu_objet">Objectives of the Project</string>
    <string name="menu_paque">Project Packages</string>
    <string name="menu_rf">Functional Requirements</string>
    <string name="menu_rnf">Non-Functional Requirements</string>
    <string name="menu_ri">Information Requirements</string>
    <string name="menu_estim">Estimates</string>

    <string name="toolbar_grupo">Worker</string>
    <string name="toolbar_actor">Actor</string>
    <string name="toolbar_objet">Objective</string>
    <string name="toolbar_paque">Package</string>
    <string name="toolbar_rf">Functional Requirement</string>
    <string name="toolbar_rnf">Non-Functional Requirement</string>
    <string name="toolbar_ri">Information Requirement</string>

    <string name="progress_dialog">Getting information</string>
    <string name="conf_frag_ip">Ip Server</string>
    <string name="conf_frag_ip_sql">Ip Server MySQL</string>
    <string name="conf_frag_user">User</string>
    <string name="conf_frag_pass">Password</string>
    <string name="conf_frag_database">Database</string>
    <string name="conf_frag_port">Port MySql</string>
    <string name="conf_frag_port_http">Port HTTP</string>
    <string name="conf_frag_http">HTTP/HTTPS</string>
    <string name="conf_frag_conn">Connect and Save</string>
    <string name="success">Success</string>

    <string name="conf_frag_error_1">The file could not be written</string>
    <string name="error_connect">Unable to connect to server</string>
    <string name="error_read_file">The file could not be read</string>
    <string name="error_query">Error with the query</string>
    <string name="error_empty_param">There are empty parameters</string>
    <string name="error_empty_query">The query is empty</string>

    <string name="new_desc">New Description</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="quest_delete">Do you want to delete?</string>

    <string name="data">Data</string>
    <string name="autho">Authors</string>
    <string name="sourc">Sources</string>
    <string name="objec">Objectives</string>
    <string name="reque">Requirements</string>
    <string name="datesp">Spe. Dat.</string>
    <string name="actor">Actors</string>
    <string name="secnor">Seq. Nor.</string>
    <string name="secexc">Seq. Exc.</string>

    <string name="text_name">Name</string>
    <string name="text_version">Version</string>
    <string name="text_org">Organization</string>
    <string name="text_rol">Role</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_comen">Commentary</string>
    <string name="text_categ">Category</string>
    <string name="text_devel">Is Developer</string>

    <string name="text_desc">Description</string>
    <string name="text_desc_comp">Desc. Comple.</string>
    <string name="text_comp">Complexity</string>

    <string name="text_vlow">Very Low</string>
    <string name="text_low">Low</string>
    <string name="text_med">Medium</string>
    <string name="text_high">High</string>
    <string name="text_vhigh">Very High</string>

    <string name="text_prio">Priority</string>
    <string name="text_urge">Urgency</string>
    <string name="text_stab">Stability</string>
    <string name="text_sta">State</string>

    <string name="text_ver">Verified</string>
    <string name="text_nver">Not verified</string>

    <string name="text_ocu">Occurrences</string>
    <string name="text_tlif">Time to life</string>

    <string name="text_medo">Medium</string>
    <string name="text_max">Maximum</string>

    <string name="text_precond">Precondition</string>
    <string name="text_postcond">Postcondition</string>

    <string name="text_tec_fact">Technical Factors</string>

    <string name="text_dsr">Distributed system required</string>
    <string name="text_rtii">Response time is important</string>
    <string name="text_eue">End user efficiency</string>
    <string name="text_cipr">Complex internal processing required</string>

    <string name="text_rcmbaf">Reusable code must be a focus</string>
    <string name="text_ie">Installation ease</string>
    <string name="text_u">Usability</string>
    <string name="text_cps">Cross-Platform support</string>

    <string name="text_etc">Easy to change</string>
    <string name="text_hc">Highly concurrent</string>
    <string name="text_cs">Custom security</string>
    <string name="text_dotpc">Dependence on third-party code</string>
    <string name="text_ut">User training</string>

    <string name="text_env_fact">Environmental Factors</string>

    <string name="text_fwtp">Familiarity with the project</string>
    <string name="text_ae">Application experience</string>
    <string name="text_oope">OO programming experience</string>
    <string name="text_lac">Lead analyst capability</string>

    <string name="text_m">Motivation</string>
    <string name="text_sr">Stable requirements</string>
    <string name="text_pts">Part time staff</string>
    <string name="text_dpl">Difficult programming language</string>

    <string name="text_help_dsr">Higher numbers represent a more complex architecture.</string>
    <string name="text_help_rtii">Higher numbers represent an increasing importance of response time.</string>
    <string name="text_help_eue">Higher numbers represent projects that depend more on the application, to improve user efficiency.</string>
    <string name="text_help_cipr">Complex algorithms have higher numbers.</string>

    <string name="text_help_rcmbaf">The higher numbers represent the level of reuse, the lower the number.</string>
    <string name="text_help_ie">The higher numbers represent the level of competence of the users, the lower the number.</string>
    <string name="text_help_u">The greater the importance of usability, the greater the number.</string>
    <string name="text_help_cps">The more platforms that have to be supported, the greater the value.</string>

    <string name="text_help_etc">The more personalization is required in the future, the greater the value.</string>
    <string name="text_help_hc">The more attention you have to dedicate to resolving conflicts in the data or the application, the greater the value.</string>
    <string name="text_help_cs">The more custom security work you have to perform, the greater the value.</string>
    <string name="text_help_dotpc">The more third-party code, the smaller the number.</string>
    <string name="text_help_ut">The later the users cross the suction threshold, the higher the value.</string>

    <string name="text_help_fwtp">Higher levels of experience get a higher number.</string>
    <string name="text_help_ae">Higher numbers represent more experience.</string>
    <string name="text_help_oope">Higher numbers represent more POO experience.</string>
    <string name="text_help_lac">Higher numbers represent greater skill and knowledge.</string>

    <string name="text_help_m">Higher numbers represent more motivation.</string>
    <string name="text_help_sr">Higher numbers represent more changes.</string>
    <string name="text_help_pts">The multiplier for this number is negative, the higher numbers reflect members of the team that are not dedicated full-time to the project or are external to the entity.</string>
    <string name="text_help_dpl">This multiplier is also negative, the harder languages ​​represent higher numbers.</string>

    <string name="text_tfc">TFC</string>
    <string name="text_ef">EF</string>
    <string name="text_uucp">UUCP</string>
    <string name="text_aw">AW</string>
    <string name="text_ucp">UCP</string>
    <string name="text_hxucp">Hour/UCP</string>
    <string name="text_he">Hours of Effort</string>

    <string name="text_fc">Final Calculations</string>

    <string-array name="categories">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>