<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_grupo"
            android:icon="@drawable/ic_grupo"
            android:title="@string/menu_grupo" />
        <item
            android:id="@+id/menu_paque"
            android:icon="@drawable/ic_paque"
            android:title="@string/menu_paque" />
        <item
            android:id="@+id/menu_objet"
            android:icon="@drawable/ic_objet"
            android:title="@string/menu_objet" />
        <item
            android:id="@+id/menu_actor"
            android:icon="@drawable/ic_actor"
            android:title="@string/menu_actor" />
        <item
            android:id="@+id/menu_rf"
            android:icon="@drawable/ic_rf"
            android:title="@string/menu_rf" />
        <item
            android:id="@+id/menu_rnf"
            android:icon="@drawable/ic_rnf"
            android:title="@string/menu_rnf" />
        <item
            android:id="@+id/menu_ri"
            android:icon="@drawable/ic_ri"
            android:title="@string/menu_ri" />
        <item
            android:id="@+id/menu_estim"
            android:icon="@drawable/ic_conf"
            android:title="@string/menu_estim" />
        <item
            android:id="@+id/menu_conf"
            android:icon="@drawable/ic_conf"
            android:title="@string/menu_conf" />
    </group>
</menu>