<?xml version="1.0" encoding="utf-8"?>
<!-- Autor: Arturo Balleros Albillo -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextIpServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/conf_frag_ip"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextIpServerMySQL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_frag_ip_sql"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_frag_user"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_frag_pass"
            android:inputType="textPassword"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_frag_database"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_frag_port"
            android:inputType="number"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextPortHttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/conf_frag_port_http"
            android:inputType="number"
            android:textSize="18dp" />

        <Switch
            android:id="@+id/switchHTTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/conf_frag_http" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:text="@string/conf_frag_conn" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>