<?xml version="1.0" encoding="utf-8"?>
<!-- Autor: Arturo Balleros Albillo -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.GroupActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_name"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/editTextVer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_version"
                    android:inputType="numberDecimal"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/formato_fecha"
                    android:inputType="date"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/editTextOrg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_org"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/editTextRol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_rol"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:hint="@string/text_devel"
                        android:textSize="18dp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonYes"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:gravity="center"
                            android:text="@string/text_yes" />

                        <RadioButton
                            android:id="@+id/radioButtonNo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/text_no" />

                    </RadioGroup>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="5dp"
                        android:hint="@string/text_categ"
                        android:textSize="18dp" />

                    <Spinner
                        android:id="@+id/spinnerCateg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="90dp"
                        android:entries="@array/categories"
                        android:textSize="18dp" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextComen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/text_comen"
                    android:textSize="18dp" />
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>